--- a/portfolio.html
+++ b/portfolio.html
@@ -63,6 +63,7 @@
       background: var(--muted);
       transform: translateY(-2px);
       color: var(--primary);
+      border-radius: 5px;
     }
     .hamburger {
       display: none;
