--- a/portfolio.html
+++ b/portfolio.html
@@ -262,7 +262,7 @@
   <section id="about-me" class="container" data-aos="fade-up">
     <img src="images/profilepic.jpg" alt="Happy Prajapati">
     <div class="about-text">
-      <p>I’m a web developer with 3+ years building apps using React, Node.js & MongoDB. I believe in bold, clean interfaces powered by solid code.</p>
+      <p>I’m a web developer with 1+ years building website using Web-technologies , Java , PHP , MySQL and PostgreSQL. I believe in bold, clean interfaces powered by solid code.</p>
       <p>When I'm not coding, you’ll find me exploring sci-fi worlds or crafting new recipes with equal passion.</p>
     </div>
   </section>
